2006-10-30  Kostas Nakos  <knakos@gmail.com>
* wince/port/*, ui_basic.c, DOC/INSTALL.wince: added support for QVGA landscape 
  smartphones, added the virtual keyboard (kb_ui) and updated documentation.


2006-09-04  Piotr Fusik  <fox@scene.pl>
* cartridge.[ch], ui.c, DOC/cart.txt: added 128 KB SpartaDOS X cartridge type,
  by the way: shortened the cartridge code and replaced letters with numbers
  for bank indexing in the documentation


2006-07-23  Piotr Fusik  <fox@scene.pl>
* input.[ch], atari_x11.c, win32/main.c: middle button support
  for ST and Amiga mice


2006-07-21  Piotr Fusik  <fox@scene.pl>
* antic.c: corrected PMG in bizarre ANTIC/GTIA modes


2006-07-01  Mark Grebe  <markgrebe@yahoo.com>
* antic.[ch], ui.c: new style of artifacting


2006-06-29  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile, win32/msc/config.h, DOC/INSTALL:
  upgraded VC++ from 6.0 to 2005


2006-05-01  Piotr Fusik  <fox@scene.pl>
* util/act2html.*: replaced my old C program with a Perl script;
  the Perl script keeps hues from different palettes together
  which I think is better for palette comparisons

* util/colors.asx, util/colors.xex: Atari program that displays all 256 colors

* util/crlf.*, util/keyboard.txt, util/usage2html.pl: removed

* util/readme.txt: updated

* act/gray.act: 0x00,0x11,0x22,... instead of 0x00,0x10,0x20,...


2006-04-24  Piotr Fusik  <fox@scene.pl>
* util/sethdr.pl, util/sethdr.txt: removed; the script hasn't been updated
  for years (so it supported only half of current cartridge types),
  wasn't portable, etc. "Create Cartridge from ROM image" in the emulator
  basically does the job of the removed script.

* util/makebb.bat: removed; anyone who is serious about making a ROM image
  of "Bounty Bob Strikes Back 5200" by concatenating 3 files can read
  DOC/cart.txt


** 2.0.2 released on 2006-04-08

2006-04-08  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: map ATARI key to SDL_BACKQUOTE key as well (similarly to DOS